label  fix
prevents the label from going too far left

--- a/betterdiscord/main.css
+++ b/betterdiscord/main.css
@@ -2332,3 +2332,6 @@
   top: 13px;
   right: 50px;
 }
+:root .layer-2BGhQ8.disabledPointerEvents-cGr1My[style*="left: -"] {
+  left: 0 !important;
+}
